--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "^4.0",
-        "slim/psr7": "^0.6.0"
+        "nyholm/psr7": "^1.2",
+        "nyholm/psr7-server": "^0.4.1"
     }
 }
