--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "slim/slim": "^4.0",
-        "nyholm/psr7": "^1.2",
-        "nyholm/psr7-server": "^0.4.1"
+        "zendframework/zend-diactoros": "^2.2"
     }
 }
